src/snapshots/sqlc__test__select__aggregations__count.snap
---
source: src/test.rs
expression: rs
---
pub struct ARows {
    pub language_id: i32,
    pub count: i64,
}
pub async fn a(
    c: &impl tokio_postgres::GenericClient,
) -> Result<Vec<ARows>, tokio_postgres::Error> {
    c.query("SELECT language_id, count(1) FROM films GROUP BY 1", &[])
        .await
        .map(|rs| {
            rs.into_iter()
                .map(|r| ARows {
                    language_id: r.get(0),
                    count: r.get(1),
                })
                .collect()
        })
}
